texto actualizado de la sección Home

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>La confianza que no se forza, solo fluye</h1>
           <p>
             Primero que todo te quiero dar las gracias por tu amistad, quiero
-            que sepas que te quiero demasiado negra, que sepas que te valoro
+            que sepas que te quiero demasiado, que sepas que te valoro
             demasiado.
           </p>
 
