Pagina web finalizada

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section id="cards-section">
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.webp" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
@@ -70,42 +70,39 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.webp" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
-              No siempre pasan cosas grandes, pero contigo hasta lo más simple
-              tiene su toque. Una charla random, un meme tonto, o simplemente
-              saber que estás... y ya con eso alcanza. Gracias por estar sin
-              tener que decir tanto.
+              La chica con los ojitos y el cabello mas lindooooo, quien esss?
+              Exacto, eres tuuu! 🥰 y deje de dormir tanto Koala jajaja. Y
+              tambien toma mucha awita.
             </p>
           </div>
         </article>
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.webp" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
-              No siempre pasan cosas grandes, pero contigo hasta lo más simple
-              tiene su toque. Una charla random, un meme tonto, o simplemente
-              saber que estás... y ya con eso alcanza. Gracias por estar sin
-              tener que decir tanto.
+              Siempre te voy a querer pase lo que pase, verdad pitufina? 🥹 y
+              deja de estar tanto en el sol que te vas a desaparecer en la
+              noche. 🌙
             </p>
           </div>
         </article>
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.webp" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
-              No siempre pasan cosas grandes, pero contigo hasta lo más simple
-              tiene su toque. Una charla random, un meme tonto, o simplemente
-              saber que estás... y ya con eso alcanza. Gracias por estar sin
-              tener que decir tanto.
+              La amistad mas bonita que tengo a la distancia, aunque duremos
+              hasta un día entero sin hablar jajaja, pero bueno eso no es
+              problema de nada.
             </p>
           </div>
         </article>
