--- a/notes.html
+++ b/notes.html
@@ -19,14 +19,11 @@
         <div class="container-music">
           <div class="layout-header">
             <div class="layout-name-music">
-              <img
-                src="/img/Photograph.svg"
-                alt="Logo de la cancion Photograph"
-              />
+              <img src="/img/huracan.jpg" alt="Logo de la cancion Photograph" />
 
               <div class="name-music">
-                <p><strong>Photograph</strong></p>
-                <span>Ed Sheeran</span>
+                <p><strong>Huracán</strong></p>
+                <span>Gera MX</span>
               </div>
             </div>
 
@@ -40,10 +37,7 @@
               <ion-icon name="play-circle-outline" id="play"></ion-icon>
               <ion-icon name="pause-circle-outline" id="pause"></ion-icon>
             </button>
-            <audio
-              id="music"
-              src="/img/Photograph - Ed Sheeran (SlowedReverb).mp3"
-            ></audio>
+            <audio id="music" src="/img/GeraMX-Huracan.mp3"></audio>
           </div>
         </div>
 
@@ -51,10 +45,22 @@
 
         <article class="message-card-friend" id="show-more">
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint
-            corrupti, hic laboriosam tenetur ullam autem inventore corporis amet
-            est ipsam? Nostrum consequatur officia esse nisi quam, vero
-            doloremque molestias sunt.
+            Primero que todo Debany te quiero agradecer muchisimo por tu amistad
+            negra, quiero que sepas que la valoro y te valoro demasiadoooo, te
+            quiero muchisimooo enserio, eres una muy buena amiga, tambien quiero
+            que sepas que puedes contar conmigo para lo que sea en cualquier
+            momento 🥰, tienes un cabello super hermoso, unos ojitos bien
+            wonitosss, y una actitud super chida, enserio nunca cambies,
+            recuerda que eres una chica muy inteligente y que todo lo que te
+            propongas lo vas a lograr si o si en el nombre de Dios. Muchas
+            gracias por estar ahí para mi también, por darme consejosss, y
+            bueno, muchísimas gracias por tu amistad. 💕 Y ojalá nunca nos
+            volvamos a dejar de hablar por que ese día si fue bien feito. Y
+            terminando, feliz un año de amistad a la distancia. 🥹
+            <strong
+              >TE QUIEROO MUCHOOOO! NUNCA LO OLVIDES, DE AQUI AL FINAL DEL
+              UNIVERSO... ♾️</strong
+            >
           </p>
           <div class="shadow-container"></div>
         </article>
