--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section id="cards-section">
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.webp" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
@@ -70,7 +70,7 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.webp" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
@@ -83,7 +83,7 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.webp" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
@@ -96,7 +96,7 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.webp" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" />
           </div>
           <div class="message-card">
             <p>
