He actualizado el texto del final de la pagina

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <!--END SECTION-->
       <section class="end-section">
         <div class="blur"></div>
-        <h2>Has llegado hasta el fin de la pagina.</h2>
+        <h2>Has llegado hasta el final de la pagina.</h2>
         <p>
           Espero te haya gustado este regalito para ti, se que es mucho texto,
           pero muchas gracias por leerlo completo.
