Add loading type lazy

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section id="cards-section">
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" loading="lazy" />
           </div>
           <div class="message-card">
             <p>
@@ -70,7 +70,7 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" loading="lazy" />
           </div>
           <div class="message-card">
             <p>
@@ -83,7 +83,7 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" loading="lazy" />
           </div>
           <div class="message-card">
             <p>
@@ -96,7 +96,7 @@
 
         <article class="cards">
           <div class="heart-card">
-            <img src="./img/heart.png" alt="Corazon flechado" />
+            <img src="./img/heart.png" alt="Corazon flechado" loading="lazy"/>
           </div>
           <div class="message-card">
             <p>
@@ -125,7 +125,7 @@
             <ion-icon name="arrow-back-outline"></ion-icon>
           </button>
 
-          <img src="" alt="Imagenes de Debany" />
+          <img src="" alt="Imagenes de Debany" loading="lazy" />
 
           <button class="btn-arrow" id="btn-next" tabindex="0">
             <ion-icon name="arrow-forward-outline"></ion-icon>
