--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </section>
 
-      <span></span>
+      <div style="height: 2000px;"></div>
 
       <!--CARDS SECTION-->
 
