Add theme color to head HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <title>DBY - This for you.</title>
     <link rel="shortcut icon" href="/img/favicon.webp" type="image/x-icon" />
+    <meta name="theme-color" content="#0a0a0a">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
