--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>DBY - This for you.</title>
     <link rel="shortcut icon" href="/img/favicon.webp" type="image/x-icon" />
     <meta name="theme-color" content="#0a0a0a">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
