--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <title>DBY - This for you.</title>
     <link rel="shortcut icon" href="/img/favicon.webp" type="image/x-icon" />
     <meta name="theme-color" content="#0a0a0a">
-    <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- PWA -->
+    <meta name="theme-color" content="#0b0c1a" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
